welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:10: error: 'while' expected but 'if' found.
  if (y<=2) {
  ^Poucet:15: error: '(' expected but '}' found.
}
^