welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var x=0
while (!sortieTrouvee()) {
  var  y=0
  do {
    if (estSurBiscuit()) {
      y=y+1
    avance()
    }
  }
  if (y<=2) {
     droite()
  } else {
     gauche()
  } while (!crossing)
}
avance()